for Xcode7 happy

--- a/HiPDA/HiPDA-Info.plist
+++ b/HiPDA/HiPDA-Info.plist
@@ -53,5 +53,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <!--彻底倒退回不安全的HTTP网络请求，能任意进行HTTP请求 (不建议这样做)-->
+        <!--https://github.com/ChenYilong/iOS9AdaptationTips -->
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
