被升级....Crashlytics -> Fabric

--- a/HiPDA/HiPDA-Info.plist
+++ b/HiPDA/HiPDA-Info.plist
@@ -37,6 +37,20 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>20150812</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>336a8682811030a9c9e624b36e32131ea1d5a8fd</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
