--- a/leancloud/hpimg/package.json
+++ b/leancloud/hpimg/package.json
@@ -18,6 +18,7 @@
     "cookie-parser": "^1.3.5",
     "ejs": "2.3.1",
     "express": "4.12.3",
+    "iconv-lite": "^0.4.13",
     "leanengine": "^0.2.0",
     "node-qiniu": "^6.2.0"
   }
