--- a/HiPDA/HiPDA-Info.plist
+++ b/HiPDA/HiPDA-Info.plist
@@ -58,6 +58,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>HiPDA需要您的同意, 才能访问相机</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>HiPDA需要您的同意, 才能访问相册</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
